--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
-title: Your awesome title
-author: GitHub User
+title: El mejor Programador Web
+author: Luis Davila
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Closes #3.
+  Closes #2.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: lufdate
+github_username:  DavilaLuis
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme : minima
