--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ description: #closes 2
 twitter_username: lufdate
 github_username:  DavilaLuis
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
 theme : minima
